# loopauth

./: .gitignore  .taplo.toml  .worktreeinclude  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.cargo/: audit.toml
.github/workflows/: ci.yml
assets/: error.html  success.html
examples/: auth.rs  auth_discovery.rs  auth_https.rs  auth_jira.rs  auth_slack.rs  jwks_demo.rs  refresh_demo.rs
src/: builder.rs  error.rs  jwks.rs  lib.rs  pages.rs  pkce.rs  scope.rs  server.rs  store.rs  test_support.rs  tls.rs  token_response.rs
src/oidc/: configuration.rs  error.rs  mod.rs  string_or_vec.rs  token.rs
src/oidc/claims/: audience.rs  email.rs  issuer.rs  mod.rs  picture_url.rs  serde.rs  subject_identifier.rs
src/token/: access_token.rs  mod.rs  refresh_token.rs  validation_state.rs
tests/: auth_flow.rs  custom_token_response.rs  jwks_flow.rs  oidc_discovery.rs  oidc_flow.rs  page_context_scopes.rs  refresh_flow.rs  refresh_token_preservation.rs
